fixing overflow

--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@ ul{
     padding: 0;
     background-color: #000000;
     position: sticky;
+    overflow: auto;
 }
 
 ul li {
